# NumLab-Metody-Numeryczne

./: CMakeLists.txt  NumLab.cpp  NumLab.sln  NumLab.vcxproj  NumLab.vcxproj.filters  README.txt  build_lib.sh  framework.h
examples/ex_approx/: ex_approx.cpp  ex_approx.vcxproj  ex_approx.vcxproj.filters
examples/ex_differential/: ex_differential.cpp  ex_differential.vcxproj  ex_differential.vcxproj.filters
examples/ex_integrate/: ex_integrate.cpp  ex_integrate.vcxproj  ex_integrate.vcxproj.filters
examples/ex_interpolate/: ex_interpolate.cpp  ex_interpolate.vcxproj  ex_interpolate.vcxproj.filters
examples/ex_linsolve/: ex_linsolve.cpp  ex_linsolve.vcxproj  ex_linsolve.vcxproj.filters
examples/ex_nlsolve/: ex_nlsolve.cpp  ex_nlsolve.vcxproj  ex_nlsolve.vcxproj.filters
include/: approx.h  differential.h  integrate.h  interpolate.h  linsolve.h  nlsolve.h
src/: approx.cpp  differential.cpp  integrate.cpp  interpolate.cpp  linsolve.cpp  nlsolve.cpp
tests/AutomaticTests/: AutomaticTests.cpp  AutomaticTests.vcxproj  AutomaticTests.vcxproj.filters
